# WildberriesTracker

./: README.md  docker-compose.yml
server/: .env.example  .gitignore  Dockerfile  pyproject.toml
server/src/adapters/api/: app.py
server/src/adapters/api/product/: __init__.py  dependencies.py  routes.py  schemas.py
server/src/adapters/database/: __init__.py  alembic-example.ini  alembic.ini  mapping.py  sa_session.py  settings.py  tables.py
server/src/adapters/database/migrations/: env.py
server/src/adapters/database/migrations/versions/: 4d0aa881066b_add_product_table.py
server/src/adapters/database/repositories/: __init__.py  product_repository.py
server/src/adapters/requests/: __init__.py  parser.py
server/src/application/: constants.py  exceptions.py
server/src/application/product/: entities.py  interfaces.py  services.py
server/src/composites/: app.py
